# ogcode.dev

./: .gitignore  CHANGELOG.md  LICENSE  README.md  install.sh  pyproject.toml
ogcode/: cli.py  pty_runner.py  recorder.py
tests/: test_dispatch.py  test_recorder.py  test_smoke.py
